--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "forever webpack --inline --colors --progress --display-error-details --display-cached",
     "watch": "npm run build -- --watch",
-    "server": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --host 0.0.0.0 --port 8080  --content-base src",
+    "server": "forever webpack-dev-server --inline --colors --progress --display-error-details --display-cached --host 0.0.0.0 --port 8080  --content-base src",
     "start": "npm run server"
   },
   "contributors": [
