--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "A simple starter Angular2 project",
   "scripts": {
-    "build": "forever webpack --inline --colors --progress --display-error-details --display-cached",
+    "build": "webpack --inline --colors --progress --display-error-details --display-cached",
     "watch": "npm run build -- --watch",
-    "server": "forever webpack-dev-server --inline --colors --progress --display-error-details --display-cached --host 0.0.0.0 --port 8080  --content-base src",
+    "server": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --host 0.0.0.0 --port 8080  --content-base src",
     "start": "npm run server"
   },
   "contributors": [
