dynamodb set up done

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/router": "3.0.0",
     "@angular/upgrade": "2.0.0",
     "angular2-in-memory-web-api": "0.0.20",
+    "aws-sdk": "^2.6.7",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "forever": "^0.15.2",
