--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "aws-sdk": "^2.6.7",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "express": "^4.14.0",
     "forever": "^0.15.2",
     "ie-shim": "^0.1.0",
     "reflect-metadata": "^0.1.3",
