done with insertion and reading of data

--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "@angular/upgrade": "2.0.0",
     "angular2-in-memory-web-api": "0.0.20",
     "aws-sdk": "^2.6.7",
+    "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "cors": "^2.7.1",
     "express": "^4.14.0",
     "forever": "^0.15.2",
     "ie-shim": "^0.1.0",
